Ajout de la contrainte du cycle de temps --> Initialisation de tout duree a 1 pour tester --> Debut d'une implementation d'une clock
Co-authored-by: Léon <dalleleon@gmail.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,4 +11,6 @@ add_executable(optimisation_d_une_ligne_d_assemblage_ing2_tg_2023_2024_5_6
         src/main.c
         src/main.h
         src/initialisation_operations.c
-        src/initialisation_operations.h)
+        src/initialisation_operations.h
+        src/Time_module.c
+        src/Time_module.h)
