Séparation des codes et du main pour la fusion
Co-authored-by: annabelle-lni <114351870+annabelle-lni@users.noreply.github.com>
Co-authored-by: Alara Tanguy <alara.tanguy@edu.ece.fr>
Co-authored-by: Felix CADENE <felixcadene0@gmail.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,5 +11,6 @@ add_executable(optimisation_d_une_ligne_d_assemblage_ing2_tg_2023_2024_5_6
         src/main.c
         src/Bloc.c
         src/Bloc.h
-
+        src/exclusion.c
+        src/main.h
 )
