--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,4 +18,6 @@ add_executable(optimisation_d_une_ligne_d_assemblage_ing2_tg_2023_2024_5_6
         src/Fonctions_tests_affichage.c
         src/Fonctions_tests_affichage.h
         src/Traverser_les_operations.c
-        src/Traverser_les_operations.h)
+        src/Traverser_les_operations.h
+        src/precedence.c
+        src/precedence.h)
