--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,4 +20,5 @@ add_executable(optimisation_d_une_ligne_d_assemblage_ing2_tg_2023_2024_5_6
         src/Traverser_les_operations.c
         src/Traverser_les_operations.h
         src/precedence.c
-        src/precedence.h)
+        src/precedence.h
+)
