- Ajout de fichiers headers pour exclusion. - Ajout d'une meilleur interface

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,4 +26,9 @@ add_executable(optimisation_d_une_ligne_d_assemblage_ing2_tg_2023_2024_5_6
         src/Traverser_les_operations.h
         src/precedence.c
         src/precedence.h
+        src/color.c
+        src/color.h
+        src/multi_contraintes.c
+        src/multi_contraintes.h
+        src/exclusion.h
 )
